// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAvatar no avatar URL 1`] = `
<DocumentFragment>
  <span
    class="iconInline userAvatar"
  >
    t
  </span>
</DocumentFragment>
`;

exports[`UserAvatar with avatar URL 1`] = `
<DocumentFragment>
  <span
    class="iconInline"
  >
    <img
      alt=""
      class="userAvatar"
      role="presentation"
      src="u"
    />
  </span>
</DocumentFragment>
`;
